# kdb-parquet

./: CMakeLists.txt  LICENSE  README.md  demo_write_parquet.q  io.q  parquet.q  writer.cpp
